// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExtendedReminder renders correctly with default values 1`] = `
.emotion-0.emotion-0 {
  margin-right: 4px;
}

.emotion-4.emotion-4 {
  margin-bottom: 8px;
}

.emotion-5.emotion-5 {
  margin-left: 4px;
  margin-right: 8px;
}

<div
  className="sui-box emotion-1"
  css={
    Object {
      "map": undefined,
      "name": "lbfful",
      "next": undefined,
      "styles": "
    border-radius: 4px;
    position: relative;
    padding: 16px;
    background-color: #e4edff;
  ",
      "toString": [Function],
    }
  }
>
  <div
    className="sui-box emotion-1"
    css={
      Object {
        "map": undefined,
        "name": "1l55rsn",
        "next": undefined,
        "styles": "
    position: absolute;
    top: -12px;
    left: 16px;
    font-weight: 500;
    text-transform: uppercase;
  ",
        "toString": [Function],
      }
    }
  >
    <span
      className="sui-box emotion-1"
      css={[Function]}
    >
      <svg
        className="sui-box sc-ui-icon emotion-0"
        css={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
        />
      </svg>
       
      10 days remaining
    </span>
  </div>
  <p
    className="sui-box emotion-1"
    css={
      Object {
        "map": undefined,
        "name": "1vcji65",
        "next": undefined,
        "styles": "
    font-weight: 500;
    text-transform: uppercase;
    color: #3f6ed8;
  ",
        "toString": [Function],
      }
    }
  >
    Verify your credit card
  </p>
  <p
    className="sui-box emotion-4"
    css={[Function]}
  >
    Enter the code we send to your bank account to validate your payment method.
  </p>
  <a
    className="sui-box emotion-1"
    css={
      Object {
        "map": undefined,
        "name": "lf1y0s",
        "next": undefined,
        "styles": "
    color: #3f6ed8;
    display: flex;
    align-items: center;
    text-decoration: none;
    font-size: 14px;
  ",
        "toString": [Function],
      }
    }
    href="/"
    to="/"
  >
    <svg
      className="sui-box sc-ui-icon emotion-5"
      css={[Function]}
      viewBox="0 0 24 24"
    >
      <path
        d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
      />
    </svg>
    Verify my credit card
  </a>
</div>
`;

exports[`ExtendedReminder renders correctly with variant 1`] = `
.emotion-0.emotion-0 {
  margin-right: 4px;
}

.emotion-4.emotion-4 {
  margin-bottom: 8px;
}

.emotion-5.emotion-5 {
  margin-left: 4px;
  margin-right: 8px;
}

<div
  className="sui-box emotion-1"
  css={
    Object {
      "map": undefined,
      "name": "kyc4ed",
      "next": undefined,
      "styles": "
    border-radius: 4px;
    position: relative;
    padding: 16px;
    background-color: #ffefe6;
  ",
      "toString": [Function],
    }
  }
>
  <div
    className="sui-box emotion-1"
    css={
      Object {
        "map": undefined,
        "name": "1l55rsn",
        "next": undefined,
        "styles": "
    position: absolute;
    top: -12px;
    left: 16px;
    font-weight: 500;
    text-transform: uppercase;
  ",
        "toString": [Function],
      }
    }
  >
    <span
      className="sui-box emotion-1"
      css={[Function]}
    >
      <svg
        className="sui-box sc-ui-icon emotion-0"
        css={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
        />
      </svg>
       
      10 days remaining
    </span>
  </div>
  <p
    className="sui-box emotion-1"
    css={
      Object {
        "map": undefined,
        "name": "3oxv6c",
        "next": undefined,
        "styles": "
    font-weight: 500;
    text-transform: uppercase;
    color: #ff8c69;
  ",
        "toString": [Function],
      }
    }
  >
    Verify your credit card
  </p>
  <p
    className="sui-box emotion-4"
    css={[Function]}
  >
    Enter the code we send to your bank account to validate your payment method.
  </p>
  <a
    className="sui-box emotion-1"
    css={
      Object {
        "map": undefined,
        "name": "lf1y0s",
        "next": undefined,
        "styles": "
    color: #3f6ed8;
    display: flex;
    align-items: center;
    text-decoration: none;
    font-size: 14px;
  ",
        "toString": [Function],
      }
    }
    href="/"
    to="/"
  >
    <svg
      className="sui-box sc-ui-icon emotion-5"
      css={[Function]}
      viewBox="0 0 24 24"
    >
      <path
        d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
      />
    </svg>
    Verify my credit card
  </a>
</div>
`;
